# gpu-normal-computation

./: .exec-helper  .gitlab-ci.yml  CMakeLists.txt  Readme.md
cmake/modules/: FindBenchmark.cmake  FindGtest.cmake
src/: CMakeLists.txt  covariance_simd.cpp  knn.h  normalComputation.cpp  normalComputation.h
test/: CMakeLists.txt  benchmark.CMakeLists.txt  benchmark_normal_computation.cpp  gtest.h  normalComputationTest.cpp  normal_computation.CMakeLists.txt  test.CMakeLists.txt  utils.CMakeLists.txt  utils.cpp  utils.h
